@@ -51,17 +51,11 @@
 
       <!-- Plugin JavaFX atualizado -->
       <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.8</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.0.0</version>
         <configuration>
           <mainClass>jala.university.MainApp</mainClass>
-          <options>
-            <option>--add-modules</option>
-            <option>javafx.controls,javafx.fxml</option>
-            <option>--add-exports</option>
-            <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
-          </options>
         </configuration>
       </plugin>
     </plugins>
